# MineFit

./: .gitignore  local_run.py  main.py  modrinth.db  notes.txt  projects.txt  pyproject.toml
cache/: modrinth.db
src/: c_exceptions.py  cache.py  cfg.py  db.py  parser.py  schemas.py  test.py  utility.py  ver_repo.py
static/: index.js
templates/: index.html
